[package]
name = "tinybitset"
description = "Generic implementation of small, fixed size, copyable bitsets"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moia-oss/tinybitset"
homepage = "https://github.com/moia-oss/tinybitset"
categories = ["data-structures"]
keywords = ["bitset", "stack", "small", "data-structure"]

[dependencies]
num-traits = "0.2.17"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_results = "warn"
unused_tuple_struct_fields = "warn"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
cargo = "warn"
# selected lints from the `pedantic` group
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
iter_not_returning_iterator = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
