[package]
name = "tinybitset"
description = "Generic implementation of small, fixed size, copyable bitsets"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moia-oss/tinybitset"
homepage = "https://github.com/moia-oss/tinybitset"
categories = ["data-structures"]
keywords = ["bitset", "stack", "small", "data-structure"]

[dependencies]
num-traits = "0.2.17"

[lints.rust]
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
unreachable_pub = "deny"
unnameable_types = "deny"
unsafe_code = "deny"
unstable_features = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "deny"
dead_code = "warn"
unused = { level = "warn", priority = -1 }
missing_docs = "deny"
refining_impl_trait = { level = "warn", priority = -1 }

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }
todo = "warn"

disallowed-types = "deny"
missing_const_for_fn = "warn"

allow_attributes = "deny"
allow_attributes_without_reason = "deny"

pedantic = { level = "warn", priority = -1 } # setting a lower priority for the group to allow individual overrides
